# dyskont-sim

./: CMakeLists.txt  README.md  buildnrun.sh
include/: kierownik.h
src/: kierownik.c  kierownik.cpp  kierownik.h  klient.c  klient.h  logger.c  logger.h  main.c  main.cpp  shared.c  shared.h  wiadomosc.c  wiadomosc.h
